added listing for couriers

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -58,6 +58,10 @@
             <td>Status </td>
             <td><%=@order.status %></td>
           </tr>
+          <tr>
+            <td>tracking number </td>
+            <td><%=@order.tracking_reference_number %></td>
+          </tr>
         </tr>
        </table>
     </div>
