--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -4,6 +4,7 @@
     <div class="row">
       <div class="col">
         <%= link_to 'Send New Courier', new_order_path, class: 'btn btn-primary' %>
+        <%= link_to 'Your Couriers', orders_path, class: 'btn btn-primary' %>
       </div>
       <div class="col">
         <%= form_tag(track_courier_status_orders_path, method: :get) do %>
